<resources>
    <string name="app_name">TeamElevenProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_item_list">ItemListActivity</string>
    <string name="title_activity_movie_detail_display">movieDetailDisplay</string>
    <string name="title_activity_recommendation">recommendationActivity</string>
    <string name="title_activity_admin_search">AdminSearch</string>
    <string name="title_activity_user_detail_display">userDetailDisplay</string>
    <string name="editProfile">Edit profile</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="logOut">Log Out</string>
    <string name="viewProfile">View Profile</string>
    <string name="id">ID</string>
    <string name="search">Search</string>
    <string name="userName">Username:</string>
    <string name="title">Title:</string>
    <string name="userName1">Username:</string>
    <string name="welcomeToBuzzMovie">Welcome to BuzzMovie!</string>
    <string name="name">Name</string>
    <string name="name1">Name:</string>
    <string name="genre1">Genre:</string>
    <string name="name2">Name</string>
    <string name="logIn">Log in</string>
    <string name="email">email:</string>
    <string name="banStatus">Ban status:</string>
    <string name="email1">Email:</string>
    <string name="password">Password</string>
    <string name="actors">Actors:</string>
    <string name="EnterAMovieSearch">Enter a Movie Search:</string>
    <string name="password1">Password</string>
    <string name="registration">Registration</string>
    <string name="length">Length:</string>
    <string name="movieRecommendation">Movie Recommendation</string>
    <string name="id1">ID</string>
    <string name="name3">name:</string>
    <string name="changeBannedStatus">Change Banned Status</string>
    <string name="name4">Name:</string>
    <string name="logIn1">Log In</string>
    <string name="released">Released:</string>
    <string name="register">Register</string>
    <string name="lockStatus">Lock Status:</string>
    <string name="getIt">Get It!</string>
    <string name="rating">Rating:</string>
    <string name="major">Major:</string>
    <string name="major1">Major:</string>
    <string name="unlockUser">Unlock User</string>
    <string name="interest">Interests:</string>
    <string name="interest1">Interests:</string>
    <string name="rateIt">Rate It!</string>
    <string name="yellowJacketLogo">yellowJacketLogo</string>
</resources>


