<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.gaTech.teamElevenProject.RegisterActivity"
    android:background="#1471d4"
    tools:showIn="@layout/activity_register">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:labelFor="@+id/passwordEditText"
        android:id="@+id/passwordEditText"
        android:layout_below="@+id/passwordTextView"
        android:layout_alignParentStart="true" />

    <EditText
        android:labelFor="@+id/IDEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name2"
        android:ems="10"
        android:id="@+id/IDEditText"
        android:layout_below="@+id/LogIn"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password1"
        android:id="@+id/passwordTextView"
        android:layout_below="@+id/IDEditText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id1"
        android:id="@+id/LogIn"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/RegisterButton"
        android:layout_below="@+id/passwordEditText"
        android:layout_toEndOf="@+id/passwordTextView"
        android:onClick="onRegisterClicked" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterBuzzLogo"
        android:src="@drawable/main_background"
        android:layout_below="@+id/RegisterButton"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/yellowJacketLogo" />

</RelativeLayout>
